--- a/index_1.html
+++ b/index_1.html
@@ -42,7 +42,7 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">Home</a>
+    <a href="index_1.html">Home</a>
     <a href="cv.html">CV</a>
     <a href="research.html">Research</a>
     <a href="blog.html">Blog</a>
