--- a/index.html
+++ b/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to Hamed's Website</title>
-    <style>
-      body {
-        font-family: sans-serif;
-        background-color: #f0f0f0;
-        text-align: center;
-        padding-top: 50px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p>This is my first website hosted on GitHub.</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Hamed Milani</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f8f8f8;
+    }
+    nav {
+      background-color: #333;
+      padding: 1em;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      margin: 0 15px;
+      font-size: 18px;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    .content {
+      padding: 50px;
+      text-align: center;
+    }
+    .textbox {
+      width: 80%;
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 15px;
+      border: 1px solid #ccc;
+      background-color: white;
+      border-radius: 8px;
+      font-size: 16px;
+    }
+  </style>
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cv.html">CV</a>
+    <a href="research.html">Research</a>
+    <a href="blog.html">Blog</a>
+    <a href="farsi.html">وبلاگ فارسی</a>
+  </nav>
+
+  <div class="content">
+    <h1>Welcome to Hamed Milani's Website</h1>
+    <div class="textbox">Text box 1 - Write anything here!</div>
+    <div class="textbox">Text box 2 - Maybe a short intro or a quote.</div>
+  </div>
+</body>
 </html>
