--- a/index.html
+++ b/index.html
@@ -1,42 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Hamed Milani</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f8f8f8;
     }
+
     nav {
       background-color: #333;
-      padding: 1em;
+      color: white;
+      padding: 10px;
       text-align: center;
     }
+
     nav a {
       color: white;
-      text-decoration: none;
       margin: 0 15px;
-      font-size: 18px;
+      text-decoration: none;
     }
-    nav a:hover {
-      text-decoration: underline;
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 90vh;
+      gap: 50px;
     }
-    .content {
-      padding: 50px;
+
+    .text-box {
+      width: 300px;
+      text-align: left;
+    }
+
+    .text-box small {
+      display: block;
+      color: gray;
+      margin-top: 10px;
+    }
+
+    .contact-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
     }
-    .textbox {
-      width: 80%;
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 15px;
-      border: 1px solid #ccc;
-      background-color: white;
-      border-radius: 8px;
-      font-size: 16px;
+
+    .contact-box img {
+      width: 150px;
+      border-radius: 50%;
+      margin-bottom: 15px;
+    }
+
+    .icons a {
+      margin: 5px;
+      font-size: 24px;
+      color: #333;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -49,10 +72,20 @@
     <a href="farsi.html">وبلاگ فارسی</a>
   </nav>
 
-  <div class="content">
-    <h1>Welcome to Hamed Milani's Website</h1>
-    <div class="textbox">Text box 1 - Write anything here!</div>
-    <div class="textbox">Text box 2 - Maybe a short intro or a quote.</div>
+  <div class="container">
+    <div class="contact-box">
+      <img src="your-photo.jpg" alt="Hamed's photo">
+      <div class="icons">
+        <a href="mailto:hamed.milani@ucalgary.com">📧</a>
+        <a href="https://www.linkedin.com/in/hamedmilani/">🔗</a>
+      </div>
+    </div>
+
+    <div class="text-box">
+      <h2>Hello, I'm Hamed</h2>
+      <p>Welcome to my personal webpage. I’m a PhD researcher working on personalized screening and diagnosis models for breast cancer.</p>
+      <small>Last updated: April 2025</small>
+    </div>
   </div>
 </body>
 </html>
