--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
     </div>
 
     <div class="text-box">
-      <h2>Hello, I'm Hamed</h2>
-      <p>Welcome to my personal webpage. I’m a PhD researcher working on personalized screening and diagnosis models for breast cancer.</p>
+      <h2>Hi, Welcome to my Page!</h2>
+      <p>I am an incoming Ph.D. student in Operations and Supply Chain Management at the Haskayne School of Business, University of Calgary, advised by Dr. Marco Bijvank and Dr. Hossein Piri. Before this, I pursued Ph.D. studies in Operations Management at Koç University and earned my M.Sc. in Industrial Engineering from Sharif University of Technology. I am interested in designing mathematical models that capture real-world healthcare problems and building algorithms to turn those models into actionable insights. My research combines Operations Research and Statistics to improve decision-making under uncertainty, especially in healthcare and supply chains applications.
+I am currently working on a project about breast cancer screening with two main parts. The first part focuses on evaluating the trade-offs and cost-effectiveness of public-level screening strategies, using a microsimulation tool. The second part is to develop a personalized framework that jointly optimizes screening and diagnosis based on individual risk factors, using approximate dynamic programming. We collaborate with co-authors from the Cumming School of Medicine and work closely with the Canadian Partnership Against Cancer (CPAC).
+Outside of research, I love cinema, literature, and metal music. I blog in English and Farsi, and I would be happy if you visit and share your thoughts!
+</p>
       <small>Last updated: April 2025</small>
     </div>
   </div>
