--- a/cv.html
+++ b/cv.html
@@ -7,5 +7,7 @@
 <body>
   <h1 style="text-align:center;">Curriculum Vitae</h1>
   <p style="text-align:center;">You can add your CV content here.</p>
+  <a href="cv.pdf" target="_blank">Download my CV (PDF)</a>
+
 </body>
 </html>
