--- a/research.html
+++ b/research.html
@@ -1,11 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>CV - Hamed Milani</title>
+  <meta charset="UTF-8">
+  <title>Research - Hamed Milani</title>
+  <style>
+    body {
+      font-family: Georgia, serif;
+      margin: 0;
+      padding: 0;
+      background: #fdfdfd;
+      color: #333;
+    }
+
+    nav {
+      background-color: #333;
+      color: white;
+      padding: 12px;
+      text-align: center;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+
+    h1 {
+      font-size: 2em;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 10px;
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      font-size: 1.2em;
+      margin-bottom: 5px;
+    }
+
+    p {
+      line-height: 1.6;
+      margin-top: 0;
+    }
+
+    .project {
+      margin-bottom: 35px;
+    }
+
+    .links a {
+      display: inline-block;
+      margin-top: 5px;
+      color: #0066cc;
+      text-decoration: none;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1 style="text-align:center;">Research</h1>
-  <p style="text-align:center;">You can add your Research content here.</p>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cv.html">CV</a>
+    <a href="research.html">Research</a>
+    <a href="blog.html">Blog</a>
+    <a href="farsi.html">وبلاگ فارسی</a>
+  </nav>
+
+  <div class="container">
+    <h1>Research Projects</h1>
+
+    <div class="project">
+      <h2>Master of Science’s Thesis</h2>
+      <p><strong>“A Markov Decision Processes Model For Supplier Selection in Supply-Chain Management Under Uncertainty”</strong><br>
+      Advisor: Prof. Alireza Haji</p>
+      <p>We study a two-echelon supply chain with a central distribution center and two suppliers with different levels of unreliability. The goal is to decide the optimal ordering proportions from each supplier under uncertainty. The problem is modeled as a discrete-time Markov Decision Process and solved exactly for a finite time horizon. Our contribution includes a new Markov Chain with three states to better capture the unreliable supplier’s behavior.</p>
+      <div class="links">
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4833769" target="_blank">View on SSRN</a> |
+        <a href="https://shorturl.at/q62mp" target="_blank">View Farsi Version</a>
+      </div>
+    </div>
+
+    <div class="project">
+      <h2>Summer Paper</h2>
+      <p><strong>“Energy-Efficient Resource Scheduling for a Single Machine with Production Constraints: A Mathematical Model”</strong><br>
+      Advisor: Prof. Barış Tan</p>
+      <p>This study models a single-machine production system with input buffer and throughput constraints. We formulate an energy-efficient scheduling model using robust optimization under uncertainty, balancing operational costs with desired throughput. The server can switch between on and off states, and our model ensures feasibility across scenarios while minimizing average costs.</p>
+      <div class="links">
+        <a href="#" target="_blank">Available upon request</a>
+      </div>
+    </div>
+
+    <div class="project">
+      <h2>Working Paper</h2>
+      <p><strong>“Personalized Breast Cancer Screening by Combining Screening and Diagnostic Decisions”</strong><br>
+      Co-authors: Milani H., Bijvank M., Piri H.</p>
+      <p>We develop a unified framework for breast cancer screening and diagnostic decisions using a Partially Observable Markov Decision Process (POMDP). By combining screening timing and diagnostic follow-up into one model, we aim to improve efficiency and personalization in breast cancer pathways. The model highlights how the interdependence of decisions can affect overall outcomes.</p>
+      <div class="links">
+        <a href="your-preprint1.pdf" target="_blank">Download Preprint</a>
+      </div>
+    </div>
+
+    <div class="project">
+      <h2>Working Paper</h2>
+      <p><strong>“Trade-offs of Breast Cancer Screening Scenarios in Canada: A Microsimulation Modeling Study”</strong><br>
+      Co-authors: Milani H., Bijvank M., Piri H.</p>
+      <p>Using the OncoSim-Breast microsimulation model, we evaluate cost-effectiveness and harm-to-benefit ratios of various breast cancer screening strategies. This includes hybrid policies combining annual and triennial intervals. Our findings suggest hybrid strategies beginning at age 45 offer superior outcomes compared to current guidelines.</p>
+      <div class="links">
+        <a href="your-preprint2.pdf" target="_blank">Download Preprint</a>
+      </div>
+    </div>
+
+  </div>
 </body>
 </html>
