--- a/index.html
+++ b/index.html
@@ -27,61 +27,67 @@
     }
 
     .container {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 40px auto;
       padding: 20px;
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
+      align-items: flex-start;
       justify-content: center;
+      gap: 40px;
     }
 
-    .text-section {
-      flex: 1 1 400px;
-      padding: 20px;
+    .photo-section {
+      flex: 0 0 250px;
+      text-align: center;
     }
 
-    .text-section h1 {
-      font-size: 2em;
-      margin-bottom: 10px;
-    }
-
-    .text-section p {
-      line-height: 1.7;
+    .photo-section img {
+      width: 220px;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
 
     .contact {
-      margin-top: 15px;
+      margin-top: 10px;
+      text-align: center;
+      font-size: 0.95em;
+      line-height: 1.6;
     }
 
     .contact a {
       text-decoration: none;
       color: #0066cc;
-      display: inline-flex;
-      align-items: center;
     }
 
     .contact img {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
+      width: 18px;
+      height: 18px;
+      vertical-align: middle;
+      margin-right: 6px;
     }
 
-    .photo-section {
-      flex: 0 0 220px;
-      text-align: center;
+    .text-section {
+      flex: 1 1 600px;
+      padding: 10px;
+      text-align: justify;
     }
 
-    .photo-section img {
-      width: 200px;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .text-section h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
     }
 
-    @media (max-width: 700px) {
+    @media (max-width: 768px) {
       .container {
         flex-direction: column;
+        align-items: center;
+      }
+
+      .text-section {
+        text-align: justify;
       }
     }
   </style>
@@ -98,21 +104,29 @@
   <div class="container">
     <div class="photo-section">
       <img src="your-photo.jpg" alt="Hamed Milani Photo">
+      <div class="contact">
+        <div>
+          <a href="mailto:hamed.milani@ucalgary.ca">hamed.milani@ucalgary.ca</a>
+        </div>
+        <div style="margin-top: 5px;">
+          <a href="https://www.linkedin.com/in/hamedmilani" target="_blank">
+            <img src="linkedin.png" alt="LinkedIn">LinkedIn
+          </a>
+        </div>
+      </div>
     </div>
+
     <div class="text-section">
       <h1>Hamed Milani</h1>
       <p>
         I am an incoming Ph.D. student in Operations and Supply Chain Management at the Haskayne School of Business, University of Calgary, advised by Dr. Marco Bijvank and Dr. Hossein Piri. Before this, I pursued Ph.D. studies in Operations Management at Koç University and earned my M.Sc. in Industrial Engineering from Sharif University of Technology. I am interested in designing mathematical models that capture real-world healthcare problems and building algorithms to turn those models into actionable insights. My research combines Operations Research and Statistics to improve decision-making under uncertainty, especially in healthcare and supply chains applications.
-I am currently working on a project about breast cancer screening with two main parts. The first part focuses on evaluating the trade-offs and cost-effectiveness of public-level screening strategies, using a microsimulation tool. The second part is to develop a personalized framework that jointly optimizes screening and diagnosis based on individual risk factors, using approximate dynamic programming. We collaborate with co-authors from the Cumming School of Medicine and work closely with the Canadian Partnership Against Cancer (CPAC).
-Outside of research, I love cinema, literature, and metal music. I blog in English and Farsi, and I would be happy if you visit and share your thoughts!
-
       </p>
-      <div class="contact">
-        <a href="mailto:hamedmilani@gmail.com">hamedmilani@gmail.com</a><br>
-        <a href="https://www.linkedin.com/in/hamedmilani" target="_blank">
-          <img src="linkedin.png" alt="LinkedIn">LinkedIn
-        </a>
-      </div>
+      <p>
+        I am currently working on a project about breast cancer screening with two main parts. The first part focuses on evaluating the trade-offs and cost-effectiveness of public-level screening strategies, using a microsimulation tool. The second part is to develop a personalized framework that jointly optimizes screening and diagnosis based on individual risk factors, using approximate dynamic programming. We collaborate with co-authors from the Cumming School of Medicine and work closely with the Canadian Partnership Against Cancer (CPAC).
+      </p>
+      <p>
+        Outside of research, I love cinema, literature, and metal music. I blog in English and Farsi, and I would be happy if you visit and share your thoughts!
+      </p>
     </div>
   </div>
 </body>
